Example tests with lincheck